--- a/Home Work 11/Base.lproj/Main.storyboard
+++ b/Home Work 11/Base.lproj/Main.storyboard
@@ -1,24 +1,56 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina5_5" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Home_Work_11" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Nae-1M-4fU">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="IMG_6323" translatesAutoresizingMaskIntoConstraints="NO" id="7Nx-4j-u5E">
+                                        <rect key="frame" x="20" y="20" width="107" height="106"/>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="7Nx-4j-u5E" firstAttribute="leading" secondItem="Nae-1M-4fU" secondAttribute="leading" constant="20" id="M3O-pl-azt"/>
+                                    <constraint firstAttribute="trailing" secondItem="7Nx-4j-u5E" secondAttribute="trailing" constant="287" id="S13-gP-aW5"/>
+                                    <constraint firstAttribute="bottom" secondItem="7Nx-4j-u5E" secondAttribute="bottom" constant="610" id="Wwv-Se-lfN"/>
+                                    <constraint firstItem="7Nx-4j-u5E" firstAttribute="top" secondItem="Nae-1M-4fU" secondAttribute="top" constant="20" id="pgM-IE-lQa"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Nae-1M-4fU" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="AA3-dw-e64"/>
+                            <constraint firstItem="Nae-1M-4fU" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="H0X-vo-R1i"/>
+                            <constraint firstItem="Nae-1M-4fU" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" id="k4w-Om-DZq"/>
+                            <constraint firstItem="Nae-1M-4fU" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" id="sdI-pW-mn1"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="131.8840579710145" y="116.51785714285714"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="IMG_6323" width="1284" height="1597"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
