--- a/Home Work 11/Base.lproj/Main.storyboard
+++ b/Home Work 11/Base.lproj/Main.storyboard
@@ -12,23 +12,65 @@
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Home_Work_11" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                    <view key="view" alpha="0.80000000000000004" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Nae-1M-4fU">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                                 <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="IMG_6323" translatesAutoresizingMaskIntoConstraints="NO" id="7Nx-4j-u5E">
-                                        <rect key="frame" x="20" y="20" width="107" height="106"/>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="IMG_6323" translatesAutoresizingMaskIntoConstraints="NO" id="7Nx-4j-u5E" userLabel="Icon Avatar">
+                                        <rect key="frame" x="20" y="20" width="100" height="100"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="7Nx-4j-u5E" secondAttribute="height" multiplier="1:1" id="cQq-0g-f1V"/>
+                                        </constraints>
                                     </imageView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="boo-N5-mAt" userLabel="Info User">
+                                        <rect key="frame" x="150" y="30" width="144" height="64"/>
+                                        <subviews>
+                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="xK6-6k-mYH" userLabel="User Name">
+                                                <rect key="frame" x="0.0" y="0.0" width="144" height="39.666666666666664"/>
+                                                <subviews>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Алексей Павлов" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pTD-Xz-jzD">
+                                                        <rect key="frame" x="0.0" y="0.0" width="144" height="23"/>
+                                                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
+                                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Установить статус" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="gNI-FQ-EkE">
+                                                        <rect key="frame" x="0.0" y="24" width="116.66666666666667" height="15.666666666666664"/>
+                                                        <fontDescription key="fontDescription" style="UICTFontTextStyleCallout"/>
+                                                        <color key="textColor" red="0.28591518370000002" green="0.66052427889999998" blue="0.96252219289999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                </subviews>
+                                            </stackView>
+                                            <stackView opaque="NO" contentMode="scaleAspectFill" spacing="3" translatesAutoresizingMaskIntoConstraints="NO" id="PST-VO-FlL" userLabel="Status">
+                                                <rect key="frame" x="0.0" y="43.666666666666671" width="48" height="20.333333333333329"/>
+                                                <subviews>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" text="online" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hzw-Ei-T6d">
+                                                        <rect key="frame" x="0.0" y="0.0" width="31.666666666666668" height="20.333333333333332"/>
+                                                        <fontDescription key="fontDescription" style="UICTFontTextStyleCaption1"/>
+                                                        <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="iphone.homebutton" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Bfu-ho-DMe">
+                                                        <rect key="frame" x="34.666666666666657" y="1.9999999999999982" width="13.333333333333336" height="16.333333333333336"/>
+                                                        <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                        <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="small"/>
+                                                    </imageView>
+                                                </subviews>
+                                            </stackView>
+                                        </subviews>
+                                    </stackView>
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstItem="7Nx-4j-u5E" firstAttribute="leading" secondItem="Nae-1M-4fU" secondAttribute="leading" constant="20" id="M3O-pl-azt"/>
-                                    <constraint firstAttribute="trailing" secondItem="7Nx-4j-u5E" secondAttribute="trailing" constant="287" id="S13-gP-aW5"/>
-                                    <constraint firstAttribute="bottom" secondItem="7Nx-4j-u5E" secondAttribute="bottom" constant="610" id="Wwv-Se-lfN"/>
-                                    <constraint firstItem="7Nx-4j-u5E" firstAttribute="top" secondItem="Nae-1M-4fU" secondAttribute="top" constant="20" id="pgM-IE-lQa"/>
+                                    <constraint firstItem="boo-N5-mAt" firstAttribute="leading" secondItem="7Nx-4j-u5E" secondAttribute="trailing" constant="30" id="7PE-gm-9y1"/>
+                                    <constraint firstAttribute="bottom" secondItem="7Nx-4j-u5E" secondAttribute="bottom" constant="616" id="Mu6-OD-c87"/>
+                                    <constraint firstItem="7Nx-4j-u5E" firstAttribute="leading" secondItem="Nae-1M-4fU" secondAttribute="leading" constant="20" id="OSN-GL-I9f"/>
+                                    <constraint firstItem="7Nx-4j-u5E" firstAttribute="top" secondItem="Nae-1M-4fU" secondAttribute="top" constant="20" id="Whb-oi-KMF"/>
+                                    <constraint firstItem="boo-N5-mAt" firstAttribute="top" secondItem="Nae-1M-4fU" secondAttribute="top" constant="30" id="se4-9B-E4z"/>
                                 </constraints>
                             </view>
                         </subviews>
@@ -49,6 +91,7 @@
     </scenes>
     <resources>
         <image name="IMG_6323" width="1284" height="1597"/>
+        <image name="iphone.homebutton" catalog="system" width="108" height="128"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
