--- a/Home Work 11/Base.lproj/Main.storyboard
+++ b/Home Work 11/Base.lproj/Main.storyboard
@@ -3,7 +3,9 @@
     <device id="retina5_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
+        <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -16,7 +18,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="1i1-oV-R5S">
-                                <rect key="frame" x="20" y="20" width="374" height="100"/>
+                                <rect key="frame" x="20" y="30" width="374" height="100"/>
                                 <subviews>
                                     <imageView autoresizesSubviews="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="IMG_6323" translatesAutoresizingMaskIntoConstraints="NO" id="7Nx-4j-u5E" userLabel="Icon Avatar">
                                         <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
@@ -66,22 +68,99 @@
                                     </stackView>
                                 </subviews>
                             </stackView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zWN-KT-Ayw">
-                                <rect key="frame" x="174" y="175" width="67" height="31"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zWN-KT-Ayw" userLabel="Edit button">
+                                <rect key="frame" x="20" y="146" width="374" height="31"/>
+                                <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Редактировать"/>
                             </button>
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacing="7" translatesAutoresizingMaskIntoConstraints="NO" id="zh6-qu-DC1">
+                                <rect key="frame" x="25" y="197" width="364" height="51.333333333333343"/>
+                                <subviews>
+                                    <button autoresizesSubviews="NO" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yK4-Ib-7VH">
+                                        <rect key="frame" x="0.0" y="0.0" width="101.66666666666667" height="51.333333333333336"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" imagePlacement="top" title="История">
+                                            <imageReference key="image" image="camera" catalog="system" symbolScale="large"/>
+                                            <preferredSymbolConfiguration key="preferredSymbolConfigurationForImage" configurationType="pointSize" pointSize="17"/>
+                                        </buttonConfiguration>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aST-HE-20a">
+                                        <rect key="frame" x="108.66666666666666" y="0.0" width="90.333333333333343" height="51.333333333333336"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" image="square.and.pencil" catalog="system" imagePlacement="top" title="Запись">
+                                            <preferredSymbolConfiguration key="preferredSymbolConfigurationForImage" scale="large"/>
+                                        </buttonConfiguration>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LDQ-fw-4CF">
+                                        <rect key="frame" x="206" y="0.0" width="73" height="51.333333333333336"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" image="photo" catalog="system" imagePlacement="top" title="Фото"/>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="75f-kx-UC3">
+                                        <rect key="frame" x="286" y="0.0" width="78" height="51.333333333333336"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" image="play.circle" catalog="system" imagePlacement="top" title="Клип"/>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                            <stackView autoresizesSubviews="NO" opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="Ndf-wj-LBg">
+                                <rect key="frame" x="20" y="268.33333333333331" width="374" height="175"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="E2L-Dt-KEl">
+                                        <rect key="frame" x="0.0" y="0.0" width="158.33333333333334" height="31"/>
+                                        <color key="tintColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" imagePlacement="leading" title="Город: Москва" imagePadding="10">
+                                            <imageReference key="image" image="house" catalog="system" symbolScale="large"/>
+                                        </buttonConfiguration>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="s2B-HA-AdN">
+                                        <rect key="frame" x="0.0" y="36" width="171.66666666666666" height="31"/>
+                                        <color key="tintColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" image="person.and.person.fill" catalog="system" title="50 подписчиков" imagePadding="10"/>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Nzs-R3-EaZ">
+                                        <rect key="frame" x="0.0" y="72" width="209" height="31"/>
+                                        <color key="tintColor" red="0.28591518370000002" green="0.66052427889999998" blue="0.96252219289999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" image="suitcase" catalog="system" title="Указать место работы" imagePadding="10"/>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="M8v-wW-Y1h">
+                                        <rect key="frame" x="0.0" y="108" width="189.33333333333334" height="31"/>
+                                        <color key="tintColor" systemColor="systemPurpleColor"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" image="snowflake" catalog="system" title="Получить подарок &gt;" imagePadding="10"/>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HdI-XE-G4o">
+                                        <rect key="frame" x="0.0" y="144" width="220.33333333333334" height="31"/>
+                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" image="exclamationmark.circle" catalog="system" title="Подробная информация" imagePadding="10"/>
+                                    </button>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="1i1-oV-R5S" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="30" id="4bY-57-MzY"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="1i1-oV-R5S" secondAttribute="trailing" constant="20" id="9d3-E4-1R3"/>
-                            <constraint firstItem="1i1-oV-R5S" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="20" id="IQ8-Oq-urZ"/>
+                            <constraint firstItem="zWN-KT-Ayw" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="K2b-5o-70f"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="zWN-KT-Ayw" secondAttribute="trailing" constant="20" id="OhS-cj-Mr7"/>
+                            <constraint firstItem="zh6-qu-DC1" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="25" id="Q94-C9-aJW"/>
                             <constraint firstItem="1i1-oV-R5S" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="20" id="U7G-lc-4wA"/>
+                            <constraint firstItem="Ndf-wj-LBg" firstAttribute="top" secondItem="zh6-qu-DC1" secondAttribute="bottom" constant="20" id="YCh-3D-5Xo"/>
+                            <constraint firstAttribute="trailing" secondItem="zh6-qu-DC1" secondAttribute="trailing" constant="25" id="ZnR-aQ-Ct4"/>
+                            <constraint firstItem="zh6-qu-DC1" firstAttribute="top" secondItem="zWN-KT-Ayw" secondAttribute="bottom" constant="20" id="etR-69-hL3"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Ndf-wj-LBg" secondAttribute="trailing" constant="20" id="gs0-z0-pXr"/>
+                            <constraint firstItem="zWN-KT-Ayw" firstAttribute="top" secondItem="1i1-oV-R5S" secondAttribute="bottom" constant="16" id="hkh-J6-AzG"/>
+                            <constraint firstItem="Ndf-wj-LBg" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="naH-Dm-1qc"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="editButton" destination="zWN-KT-Ayw" id="xaD-tN-Hhd"/>
                         <outlet property="iconAvatar" destination="7Nx-4j-u5E" id="3vD-S9-XDh"/>
                     </connections>
                 </viewController>
@@ -92,6 +171,18 @@
     </scenes>
     <resources>
         <image name="IMG_6323" width="1284" height="1597"/>
+        <image name="camera" catalog="system" width="128" height="94"/>
+        <image name="exclamationmark.circle" catalog="system" width="128" height="121"/>
+        <image name="house" catalog="system" width="128" height="106"/>
         <image name="iphone.homebutton" catalog="system" width="108" height="128"/>
+        <image name="person.and.person.fill" catalog="system" width="128" height="80"/>
+        <image name="photo" catalog="system" width="128" height="93"/>
+        <image name="play.circle" catalog="system" width="128" height="121"/>
+        <image name="snowflake" catalog="system" width="121" height="128"/>
+        <image name="square.and.pencil" catalog="system" width="128" height="115"/>
+        <image name="suitcase" catalog="system" width="128" height="100"/>
+        <systemColor name="systemPurpleColor">
+            <color red="0.68627450980392157" green="0.32156862745098042" blue="0.87058823529411766" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
     </resources>
 </document>
