--- a/Home Work 11/Base.lproj/Main.storyboard
+++ b/Home Work 11/Base.lproj/Main.storyboard
@@ -143,7 +143,7 @@
                                     </button>
                                 </subviews>
                             </stackView>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="A2y-DM-R4R">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="A2y-DM-R4R" userLabel="Separation view">
                                 <rect key="frame" x="10" y="263" width="394" height="1"/>
                                 <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
